option(RT_USING_PIN "Use Pin driver" FALSE)
option(RT_USING_ADC "Use ADC driver" FALSE)
option(RT_USING_DAC "Use DAC driver" FALSE)
option(RT_USING_PWM "Use PWM driver" FALSE)
option(RT_USING_PULSE_ENCODER "Use Pulse encoder driver" FALSE)
option(RT_USING_INPUT_CAPTURE "Use input capture driver" FALSE)

if(${RT_USING_PIN})
    target_sources(${TARGET_ELF} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/pin.c)
endif()
if(${RT_USING_ADC})
    target_sources(${TARGET_ELF} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/adc.c)
endif()
if(${RT_USING_DAC})
    target_sources(${TARGET_ELF} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/dac.c)
endif()
if(${RT_USING_PWM})
    target_sources(${TARGET_ELF} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/rt_drv_pwm.c)
endif()
if(${RT_USING_PULSE_ENCODER})
    target_sources(${TARGET_ELF} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/pulse_encoder.c)
endif()
if(${RT_USING_INPUT_CAPTURE})
    target_sources(${TARGET_ELF} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/rt_inputcapture.c)
endif()
