option(RT_USING_SERIAL "Using serial driver" TRUE)
if(${RT_USING_SERIAL})
    option(RT_USING_SERIAL_V2 "Using V2 serial driver" FALSE)
    if(${RT_USING_SERIAL_V2})
        target_sources(${TARGET_ELF} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/serial_v2.c)
    else()
        target_sources(${TARGET_ELF} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/serial.c)
    endif()
endif()